--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -10,9 +10,6 @@
         android:name="com.laupdev.yocabulary.ui.WordListFragment"
         android:label="@string/app_name"
         tools:layout="@layout/fragment_word_list">
-        <argument
-            android:name="letter"
-            app:argType="string" />
         <action
             android:id="@+id/action_wordListFragment_to_addNewWordFragment"
             app:destination="@id/addNewWordFragment" />
@@ -26,9 +23,8 @@
         android:label="@string/app_name"
         tools:layout="@layout/fragment_word_details">
         <argument
-            android:name="word_id"
-            app:argType="long"
-            android:defaultValue="0L" />
+            android:name="word"
+            app:argType="string" />
         <action
             android:id="@+id/action_wordDetailsFragment_to_addNewWordFragment"
             app:destination="@id/addNewWordFragment" />
@@ -38,9 +34,9 @@
             app:popUpTo="@id/wordListFragment"
             app:popUpToInclusive="true" />
         <argument
-            android:name="word_name"
-            app:argType="string"
-            android:defaultValue="0" />
+            android:name="is_in_vocabulary"
+            app:argType="boolean"
+            android:defaultValue="true" />
     </fragment>
     <fragment
         android:id="@+id/addNewWordFragment"
@@ -48,9 +44,8 @@
         android:label="@string/app_name"
         tools:layout="@layout/fragment_add_new_word">
         <argument
-            android:name="word_id"
-            app:argType="long"
-            android:defaultValue="0L" />
+            android:name="word"
+            app:argType="string" />
         <action
             android:id="@+id/action_addNewWordFragment_to_wordDetailsFragment"
             app:destination="@id/wordDetailsFragment" />
