--- a/app/src/main/res/layout/fragment_add_new_word.xml
+++ b/app/src/main/res/layout/fragment_add_new_word.xml
@@ -96,6 +96,7 @@
                         android:text="@string/search_in_dictionary"
                         android:textColor="@color/color_white"
                         android:textSize="12sp"
+                        android:visibility="invisible"
                         app:cornerRadius="12dp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
@@ -114,9 +115,9 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:hint="@string/general_translation"
+                        app:layout_constraintEnd_toStartOf="@id/general_translation_box"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintEnd_toStartOf="@id/general_translation_box">
+                        app:layout_constraintTop_toTopOf="parent">
 
                         <com.google.android.material.textfield.TextInputEditText
                             android:id="@+id/general_translation_edit_text"
@@ -147,8 +148,8 @@
                                 android:id="@+id/general_switch_label"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:layout_marginEnd="5dp"
                                 android:layout_marginTop="2dp"
+                                android:layout_marginEnd="5dp"
                                 android:fontFamily="@font/poppins_regular"
                                 android:text="@string/general"
                                 android:textAlignment="center"
