--- a/app/src/main/res/layout/fragment_add_new_word.xml
+++ b/app/src/main/res/layout/fragment_add_new_word.xml
@@ -22,12 +22,12 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="16dp"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_margin="16dp"
             android:orientation="vertical">
 
             <LinearLayout
