Added in_development.xml view for not finished screens

--- a/app/src/main/res/layout/fragment_word_sets_list.xml
+++ b/app/src/main/res/layout/fragment_word_sets_list.xml
@@ -3,12 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.WordSetsListFragment">
+    tools:context=".ui.WordSetsListFragment"
+    android:paddingBottom="170dp">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+    <include layout="@layout/in_development"/>
 
 </FrameLayout>
