--- a/app/src/main/res/layout/fragment_vocabulary_home.xml
+++ b/app/src/main/res/layout/fragment_vocabulary_home.xml
@@ -7,6 +7,7 @@
     tools:context=".ui.WordListFragment">
 
     <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/top_app_bar_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -24,21 +25,7 @@
             android:layout_height="wrap_content"
             app:layout_scrollFlags="scroll|enterAlways|snap"
             app:tabInlineLabel="true"
-            app:tabMode="fixed">
-
-            <com.google.android.material.tabs.TabItem
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:icon="@drawable/ic_order_alphabetical_24"
-                android:text="@string/my_words_tab" />
-
-            <com.google.android.material.tabs.TabItem
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:icon="@drawable/ic_sets_24"
-                android:text="@string/my_sets_tab" />
-
-        </com.google.android.material.tabs.TabLayout>
+            app:tabMode="fixed"/>
 
     </com.google.android.material.appbar.AppBarLayout>
 
