Finished functionality for bottom nav and changed its style

--- a/app/src/main/res/menu/main_navigation_menu.xml
+++ b/app/src/main/res/menu/main_navigation_menu.xml
@@ -2,7 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/navigation_practice"
-        android:icon="@drawable/ic_star_24"
+        android:icon="@drawable/ic_study_24"
         android:title="@string/practice" />
     <item
         android:id="@+id/navigation_sets"
