--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -22,6 +22,13 @@
         <!-- Customize your theme here. -->
         <item name="android:colorBackground">@color/color_grey</item>
         <item name="materialAlertDialogTheme">@style/ThemeOverlay.Yocabulary.MaterialAlertDialog</item>
+        <item name="bottomNavigationStyle">@style/Widget.Yocabulary.BottomNavigationView</item>
+    </style>
+
+    <style name="Widget.Yocabulary.BottomNavigationView" parent="Widget.MaterialComponents.BottomNavigationView.Colored">
+        <item name="materialThemeOverlay">@style/ThemeOverlay.App.BottomNavigationView</item>
+        <item name="itemIconTint">@color/selector_bottom_nav_tab_color</item>
+        <item name="itemIconSize">36dp</item>
     </style>
 
     <!--  Tabs Style  -->
@@ -283,5 +290,9 @@
 <!--        <item name="textColor">@color/black</item>-->
 <!--    </style>-->
 
+    <!--  ThemeOverlays  -->
+    <style name="ThemeOverlay.App.BottomNavigationView" parent="">
+        <item name="colorPrimary">@color/color_grey_lighter</item>
+    </style>
 
 </resources>
