--- a/app/src/main/res/layout/fragment_word_sets_list.xml
+++ b/app/src/main/res/layout/fragment_word_sets_list.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.WordSetsListFragment"
+    tools:context=".ui.vocabulary.WordSetsListFragment"
     android:paddingBottom="170dp">
 
     <include layout="@layout/in_development"/>
