--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/wordDetailsFragment"
-        android:name="com.laupdev.yocabulary.ui.WordDetailsFragment"
+        android:name="com.laupdev.yocabulary.ui.vocabulary.WordDetailsFragment"
         android:label="@string/app_name"
         tools:layout="@layout/fragment_word_details">
         <argument
@@ -28,7 +28,7 @@
     </fragment>
     <fragment
         android:id="@+id/addNewWordFragment"
-        android:name="com.laupdev.yocabulary.ui.AddNewWordFragment"
+        android:name="com.laupdev.yocabulary.ui.vocabulary.AddNewWordFragment"
         android:label="@string/app_name"
         tools:layout="@layout/fragment_add_new_word">
         <argument
@@ -44,7 +44,7 @@
     </fragment>
     <fragment
         android:id="@+id/vocabularyHomeFragment"
-        android:name="com.laupdev.yocabulary.ui.VocabularyHomeFragment"
+        android:name="com.laupdev.yocabulary.ui.vocabulary.VocabularyHomeFragment"
         android:label="VocabularyHomeFragment" >
         <action
             android:id="@+id/showWordDetails"
