--- a/app/src/main/res/layout/fragment_practice_home_page.xml
+++ b/app/src/main/res/layout/fragment_practice_home_page.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.practice.PracticePageFragment">
+    tools:context=".ui.practice.PracticeHomePageFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -13,6 +13,7 @@
         android:padding="16dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/match_meanings_block"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
@@ -38,6 +39,7 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/learn_spelling_block"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="25dp">
@@ -64,6 +66,7 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/mixed_practice_block"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="25dp">
