Restructured Practice pages

--- a/app/src/main/res/layout/item_question_layout.xml
+++ b/app/src/main/res/layout/item_question_layout.xml
@@ -8,6 +8,5 @@
         android:id="@+id/test_text"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="center"
-        android:text="LOX" />
+        android:gravity="center" />
 </FrameLayout>
