--- a/app/src/main/res/layout/fragment_practice.xml
+++ b/app/src/main/res/layout/fragment_practice.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:context=".ui.practice.PracticeFragment">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/top_app_bar_layout"
@@ -24,7 +26,6 @@
             android:id="@+id/practice_progress_bar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:max="10"
             app:indicatorColor="@color/color_orange"
             app:trackColor="@color/color_black"
             app:trackThickness="3dp" />
@@ -38,9 +39,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/top_app_bar_layout"
-        />
+        app:layout_constraintTop_toBottomOf="@id/top_app_bar_layout" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
-
-
